--- a/CarServisApp/CarServisApp.csproj
+++ b/CarServisApp/CarServisApp.csproj
@@ -8,4 +8,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Update="Forms\ItemDetailForm.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0-preview3.23201.1" />
+    </ItemGroup>
+
 </Project>
